gap fix

--- a/css/contact.css
+++ b/css/contact.css
@@ -84,7 +84,7 @@ form {
     display: flex;
     flex-direction: column;
     margin-right: 4rem;
-
+    gap: 1.3rem;
 }
 
 .form_name {
